hooked-config/tests/snapshots/parsing__defaults.snap
---
source: hooked-config/tests/parsing.rs
expression: config
---
Config {
    general: General {
        config: "Hooked.toml",
        directory: "hooks",
    },
    pre_commit: [
        PreCommit {
            name: None,
            on_failure: Stop,
            task: Task {
                command: None,
                script: None,
            },
        },
    ],
}
