hooked-config/tests/snapshots/parsing__with-hooks.snap
---
source: hooked-config/tests/parsing.rs
expression: config
---
Config {
    general: General {
        config: "Hooked.toml",
        directory: "hooked",
        noise_level: Minimal,
        template: Some(
            "test.sh",
        ),
    },
    pre_commit: [
        PreCommit {
            name: Some(
                "Pre Commit 1",
            ),
            noise_level: Quiet,
            on_failure: Continue,
            staged: [
                "*.txt",
            ],
            task: Task {
                command: Some(
                    "exit 0",
                ),
                script: None,
            },
        },
        PreCommit {
            name: Some(
                "Pre Commit 2",
            ),
            noise_level: Loud,
            on_failure: Stop,
            staged: [],
            task: Task {
                command: None,
                script: Some(
                    "test.sh",
                ),
            },
        },
    ],
}
